切换数据库为Demo

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 #mysql
-url=jdbc:mysql://localhost:3306/test01
+url=jdbc:mysql://localhost:3306/Demo
 user=root
 password=liu24357
 driverClass=com.mysql.jdbc.Driver
