--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/main/java/lxf/incast/entity/Molecule.java=UTF-8
+encoding//src/main/webapp/WEB-INF/view/molecule.jsp=UTF-8
 encoding/<project>=UTF-8
