--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -38,6 +38,7 @@
 		<servlet-name>spring</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
+		<async-supported>true</async-supported>
 	</servlet>
 
 	<servlet-mapping>
@@ -45,7 +46,6 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	<display-name>Archetype Created Web Application</display-name>
-
 
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
